@@ -22,7 +22,7 @@ dir = share
 
 [Prereqs / RuntimeRequires]
 Mojolicious = 7.23  ; Mojo::URL::to_unsafe_string
-Email::Address::XS = 1.01   ; is_valid; softened later
+Email::Address::XS = 1.04   ; softened later
 
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
